# stria

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/stria/: Cargo.toml
crates/stria-cache/: Cargo.toml
crates/stria-cache/src/: entry.rs  key.rs  l1.rs  l2.rs  lib.rs  negative.rs  prefetch.rs
crates/stria-config/: Cargo.toml
crates/stria-config/src/: filter.rs  lib.rs  listeners.rs  nice.rs  resolver.rs  security.rs  watch.rs
crates/stria-dnssec/: Cargo.toml
crates/stria-dnssec/src/: lib.rs
crates/stria-ede/: Cargo.toml
crates/stria-ede/src/: lib.rs
crates/stria-filter/: Cargo.toml
crates/stria-filter/benches/: filter_matching.rs
crates/stria-filter/src/: lib.rs
crates/stria-metrics/: Cargo.toml
crates/stria-metrics/src/: lib.rs  prometheus.rs  tracing_setup.rs
crates/stria-proto/: Cargo.toml
crates/stria-proto/benches/: parsing.rs  serialization.rs
crates/stria-proto/src/: class.rs  error.rs  header.rs  lib.rs  message.rs  opcode.rs  question.rs  rcode.rs  record.rs  rtype.rs  wire.rs
crates/stria-proto/src/edns/: mod.rs
crates/stria-proto/src/name/: label.rs  mod.rs  parse.rs
crates/stria-proto/src/rdata/: address.rs  authority.rs  cert.rs  dnssec.rs  mod.rs  name.rs  service.rs  text.rs  unknown.rs
crates/stria-resolver/: Cargo.toml
crates/stria-resolver/src/: forward.rs  lib.rs  pool.rs  recursive.rs  upstream.rs
crates/stria-server/: Cargo.toml
crates/stria-server/src/: control.rs  doh.rs  doq.rs  dot.rs  handler.rs  lib.rs  listener.rs  rrl.rs  stats.rs  tcp.rs  udp.rs
crates/stria-zone/: Cargo.toml
crates/stria-zone/src/: lib.rs
crates/stria/benches/: e2e_query.rs
crates/stria/src/: ctl.rs  main.rs
crates/stria/tests/: integration.rs
deploy/: install.sh  stria.service
examples/: enterprise.yaml  full.yaml  home.yaml  minimal.yaml  pihole-replacement.yaml  privacy.yaml
