[workspace]
resolver = "2"
members = [
    "crates/stria",
    "crates/stria-proto",
    "crates/stria-server",
    "crates/stria-resolver",
    "crates/stria-cache",
    "crates/stria-dnssec",
    "crates/stria-filter",
    "crates/stria-metrics",
    "crates/stria-config",
    "crates/stria-zone",
    "crates/stria-ede",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/19h/stria"
homepage = "https://github.com/19h/stria"
documentation = "https://github.com/19h/stria"
keywords = ["dns", "nameserver", "dnssec", "doh", "dot"]
categories = ["network-programming", "asynchronous"]
authors = ["Kenan Sulayman <kenan@sig.dev>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# io_uring support (Linux)
tokio-uring = { version = "0.5" }

# Networking
socket2 = { version = "0.5", features = ["all"] }
quinn = "0.11"           # QUIC implementation
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
webpki-roots = "0.26"
rcgen = "0.13"           # Certificate generation

# HTTP (for DoH)
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
axum = { version = "0.8", features = ["http2"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"

# Cryptography (DNSSEC)
ring = "0.17"
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
digest = "0.10"
base64 = "0.22"
data-encoding = "2.6"

# Caching
moka = { version = "0.12", features = ["future", "sync"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = { version = "0.18" }

# Metrics & Observability
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"

# Data structures
bytes = "1.9"
smallvec = { version = "1.13", features = ["union", "const_generics", "const_new", "serde"] }
hashbrown = { version = "0.15", features = ["serde"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
dashmap = "6"
arc-swap = "1.7"
triomphe = "0.1"

# Error handling
thiserror = "2"
anyhow = "1.0"
miette = { version = "7", features = ["fancy"] }

# Utilities
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
url = { version = "2.5", features = ["serde"] }
urlencoding = "2.1"
ipnet = { version = "2.10", features = ["serde"] }
lru = "0.12"
bitflags = { version = "2.6", features = ["serde"] }
num_enum = "0.7"
derive_more = { version = "1", features = ["full"] }
pin-project-lite = "0.2"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
cfg-if = "1.0"
once_cell = "1.20"
memchr = "2.7"
bstr = "1.11"
compact_str = { version = "0.8", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
test-case = "3.3"
rstest = "0.23"
mockall = "0.13"
wiremock = "0.6"
tempfile = "3.14"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.dev]
opt-level = 1

[profile.bench]
inherits = "release"
debug = true
