[package]
name = "stria-server"
description = "High-performance async DNS server infrastructure with UDP/TCP/DoT/DoH/DoQ support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["dns", "server", "async", "networking", "io-uring"]
categories = ["network-programming", "asynchronous"]

[features]
default = ["doh", "dot", "doq"]
io-uring = ["dep:tokio-uring"]
doh = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:axum", "dep:tower", "dep:tower-http", "dep:data-encoding", "dep:serde", "dep:serde_json"]
dot = ["dep:tokio-rustls", "dep:rustls"]
doq = ["dep:quinn", "dep:rustls"]

[dependencies]
stria-proto = { path = "../stria-proto" }
stria-config = { path = "../stria-config" }
stria-metrics = { path = "../stria-metrics" }
stria-ede = { path = "../stria-ede" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-uring = { workspace = true, optional = true }
socket2 = { workspace = true }

# TLS
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }

# QUIC
quinn = { workspace = true, optional = true }

# HTTP (DoH)
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
data-encoding = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
pin-project-lite = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
crossbeam-channel = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
hostname = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
rstest = { workspace = true }
rcgen = { workspace = true }
